--- a/ewl_tracker_assessment.html
+++ b/ewl_tracker_assessment.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        
-    </div>
 
-</body>
+<!doctype html lang="en">
+
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Login</title>
+      <style src="C:\Users\poorn\ewl_tracker_assessment\EWL-Assessment\ewl_tracker_assessment.css"></style>
+    </head> 
+    
+    <body>
+      <div class="box">
+        <h2>Login</h2>
+        <form>
+          <div class="inputBox">
+            <input type="text" name="" required>
+            <label>Username</label>
+          </div>
+          <div class="inputBox">
+            <input type="text" name="" required>
+            <label>Password</label>
+          </div>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    </body>
 </html>
